--- a/scss/components/image.scss
+++ b/scss/components/image.scss
@@ -29,48 +29,80 @@
   width: 100%;
   height: 100%;
   transition: all .1s;
+  overflow-x: scroll;
+  overflow-y: scroll;
 
   &.show {
     //display: block;
     z-index: 999999;
     opacity: 100;
 
-    .image-container {
-      max-width: 1000px;
-      .popup-image {
-        //max-width: 750px;
-      }
+    .image-popup-bg {
+      background-color: rgba(0, 0, 0, 0.25);
     }
+
+    //.image-container {
+    //  max-width: 1000px;
+    //  .popup-image {
+    //max-width: 750px;
+    //}
+    //}
   }
 
-  .image-container {
-    background-color: white;
-    //max-width: 1000px;
-    max-width: 0px;
-    transition: all .5s;
-    padding: 25px;
-    height: 100%;
-    overflow-y: scroll;
-    margin: auto;
-    display: flex;
+  //.image-container {
+  //  background-color: white;
+  //max-width: 1000px;
+  //max-width: 0px;
+  //transition: all .5s;
+  //padding: 25px;
+  //height: 100%;
+  //overflow-y: scroll;
+  //margin: auto;
+  //display: flex;
+  //position: absolute;
+  //z-index: 1;
+  //left: 0;
+  //right: 0;
+  //}
+
+  .popup-exit {
+    width: 25px;
+    height: 25px;
     position: absolute;
+    right: 10px;
+    top: 10px;
+    cursor: pointer;
+
+    background-color: white;
+    border-radius: 100px;
+
+    vertical-align: center;
+    text-align: center;
+
     z-index: 1;
+    font-weight: bolder;
+  }
+
+  img {
     left: 0;
     right: 0;
 
-    .popup-image {
-      max-width: 750px;
-      //max-width: 0px;
-      transition: all .05s;
-      height: auto;
-      margin: auto;
-    }
+    padding-top: 50px;
+    padding-bottom: 50px;
+
+    position: absolute;
+    transition: all .05s;
+
+    height: 100%;
+    width: auto;
+
+    margin: auto;
   }
 
   .image-popup-bg {
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.09);
-
+    background-color: rgba(0, 0, 0, 0);
+    transition: all .25s;
   }
 }
