--- a/scss/components/image.scss
+++ b/scss/components/image.scss
@@ -95,13 +95,13 @@
   }
 
   .image-popup-tall {
-    height: auto;
-    width: 100%;
+    //height: auto;
+    //width: 100%;
 
-    @media screen and (max-width: 1000px) {
+    //@media screen and (max-width: 1000px) {
       height: 100%;
       width: auto;
-    }
+    //}
 
   }
 
@@ -117,6 +117,8 @@
 
     //height: 100%;
     //width: auto;
+    height: 0;
+    width: 0;
 
     margin: auto;
   }
