--- a/scss/compiled-styles.scss
+++ b/scss/compiled-styles.scss
@@ -3,5 +3,5 @@
 @import "node_modules/bootstrap/scss/bootstrap";
 @import "components/nav";
 @import "components/image";
-//@import "components/home";
+@import "components/home";
 @import "components/demos/sewer/sewer-demo";
