updated sketch cover

--- a/css/compiled-styles.css
+++ b/css/compiled-styles.css
@@ -12397,7 +12397,7 @@ a.text-dark:hover, a.text-dark:focus {
     background-image: url("../img/under_the_bridge_final.png");
     background-size: cover; }
   .home-container .home-link-sketches .home-link-image {
-    background-image: url("../img/sketch_2.png");
+    background-image: url("../img/life_drawing_0.jpg"); background-position: -187px;
     background-size: cover; }
   .home-container .home-link-animation .home-link-image {
     background-image: url("../img/animation_thumbnail.png");
