--- a/scss/components/home.scss
+++ b/scss/components/home.scss
@@ -122,8 +122,9 @@
   }
 
   .home-link-sketches .home-link-image {
-    background-image: url("../img/sketch_2.png");
+    background-image: url("../img/life_drawing_0.jpg");
     background-size: cover;
+    background-position: -187px;
   }
 
   .home-link-animation .home-link-image {
